[package]
name = "actix-repro"
version = "0.1.0"
authors = ["Andrew <amcharg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { git = "https://github.com/actix/actix-web.git", branch = "master" }
actix-rt = "1.1.1"
reqwest = "0.10.6"
tokio = { version = "^0.2", features = ["full"] }
futures = "0.3.5"

[profile.release]
debug = true
